# FormalPrac2

./: CMakeLists.txt  README.md  main.cpp  main.h
Grammars/: test_algo.txt  test_grammar.txt
extern_modules/: code_coverage.cmake
include/: Algo.cpp  Algo.h  Grammar_t.cpp  Grammar_t.h  Rule_t.cpp  Rule_t.h
testing/: test.cpp  test_algo.cpp  test_grammar.cpp
